# agent-bisect

./: .gitignore  ACCURACY.md  BENCHMARK.md  CONTRIBUTING.md  DESIGN.md  INVARIANTS.md  LICENSE  ORACLE.md  README.md  STUDY.md  pyproject.toml
.github/workflows/: ci.yml
agent_bisect/: __init__.py  accuracy.py  benchmark.py  cli.py  demo.py  eval.py  foldforward.py  foreign.py  gates.py  ingest_claude.py  ingest_codex.py  inject.py  io.py  localize.py  model.py  replay.py  scan.py  shell_targets.py  study.py
agent_bisect/oracle/: __init__.py  regex.py
demo/: DEMO-TRANSCRIPT.md  WALKTHROUGH.md  agent-bisect-demo.cast
tests/: conftest.py  test_accuracy.py  test_benchmark.py  test_canonical_json_invariants.py  test_demo.py  test_foreign.py  test_gates.py  test_ingest_claude.py  test_ingest_codex.py  test_ingest_gate_invariants.py  test_inject_eval_scan.py  test_journal_invariants.py  test_localize.py  test_regex_oracle.py  test_replay.py  test_shell_targets.py  test_study.py
tests/fixtures/: claude_sanitized.jsonl  codex_sanitized.jsonl  localize_planted_fault.jsonl  mini-swe-agent-github-issue.traj.json  openhands_realtask.json  regex_oracle_patterns.json  shell_target_coverage.jsonl  slice2_sanitized.jsonl  swe_agent_function_call.traj
